# nrk-former-solver

./: .gitignore  README.md  pyproject.toml  solve.py
nrk_former_solver/: __init__.py
