[project]
name = "nrk-former-solver"
version = "0.1.0"
description = "Løser for NRK sitt minispill Former"
authors = [
    {name = "Joakim Hovlandsvåg",email = "joakim.hovlandsvag@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
